# nespa

./: Cargo.toml  LICENSE  README.md
desktop/: Cargo.toml
desktop/src/: main.rs
emulator/: Cargo.toml
emulator/src/: cpu.rs  lib.rs
emulator/src/cpu/: mod.rs  opcodes.rs  tests.rs
game-and-watch/: Cargo.toml  memory.x
game-and-watch/src/: logger.rs  main.rs
nespa/: Cargo.toml
nespa/src/cpu/: mod.rs  tests.rs
snake/: Cargo.toml
snake/src/: main.rs  snake6502.asm
src/: cartridge.rs  lib.rs  main.rs  memory.rs
src/cpu/: opcodes.rs  tests.rs
