[package]
name = "game_and_watch"
version = "0.1.0"
authors = ["Alexis Boisserand <alexis.boisserand@acuitybrands.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
bitflags = "1.2.1"
sdl2 = "0.34.0"
rand = "=0.8.3"