[package]
authors = ["Alexis Boisserand <APB14@acuitysso.com>"]
edition = "2018"
readme = "README.md"
name = "game-and-watch"
version = "0.1.0"

[dependencies]
cortex-m = "^0.7.1"
cortex-m-rt = "^0.6.12"
cortex-m-semihosting = "0.3.3"
panic-semihosting = "0.5.6"
stm32h7xx-hal = {version = "0.9.0", features = ["stm32h7b0"]}
# panic-halt = "0.2.0"
log = "0.4.14"
cortex-m-log = { version = "0.7.0", features = ["semihosting", "log-integration"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# this lets you use `cargo fix`!

[[bin]]
name = "game-and-watch"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
